--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
